End of 1/23/21 meeting updates

--- a/New Student Form.html
+++ b/New Student Form.html
@@ -24,6 +24,8 @@
         <input type=text id = "streetAddress" class = "input">
         <label for = "city" class = "label">City:</label>
         <input type=text id = "city" class = "input">
+        <label for = "state" class = "label">State:</label>
+        <input type=text id = "state" class = "input">
         <label for = "zipCode" class = "label">Zip Code:</label>
         <input type=text id = "zipCode" class = "input">
         <label for = "country" class = "label">Country:</label>
@@ -55,7 +57,25 @@
         <label for = "graduationYear" class = "label">Graduation Year:</label>
         <input type=text id = "graduationYear" class = "input"><br><br>
 
+        <!-- Seventh Row Questions -->
+        <label for = "gpa" class = "label">Current GPA:</label>
+        <input type=text id = "gpa" class = "input">
+        <label for = "mathClass" class = "label">Current Math Class:</label>
+        <input type=text id = "mathClass" class = "input">
+        <label for = "takingAP" class = "label">Is taking AP Classes:</label>
+        <input type=text id = "takingAP" class = "input">
+        <label for = "takingHonors" class = "label">Is taking Honor Classes:</label>
+        <input type=text id = "takingHonors" class = "input"><br><br>
 
+        <!-- Eigth Row Questions -->
+        <label for = "favoriteSubject" class = "label">Favorite Subject:</label>
+        <input type=text id = "favoriteSubject" class = "input">
+        <label for = "leastFavoriteSubject" class = "label">Least Favorite Subject:</label>
+        <input type=text id = "leastFavoriteSubject" class = "input"><br><br><br><br>
+
+        <!-- Ninth Row Questions -->
+        <label for = "favoriteSubject" class = "label">Favorite Subject:</label>
+        <input type=text id = "favoriteSubject" class = "input">
 
     </div>
     
