New Student Form - input tag updates

--- a/New Student Form.html
+++ b/New Student Form.html
@@ -48,7 +48,7 @@
         <label for = "sibling1" class = "label">Sibling:</label>
         <input type="text" id = "sibling1" class = "input">
         <label for = "siblingAge1" class = "label">Age:</label>
-        <input type="text" id = "siblingAge1" class = "input"><br><br>
+        <input type="number" min = 1 max = 130 id = "siblingAge1" class = "input"><br><br>
 
         <!-- Sixth Row Questions -->
         <label for = "school" class = "label">School:</label>
@@ -78,7 +78,7 @@
         <label for = "takenACT" class = "label">Has taken the ACT:</label>
         <input type="checkbox" id = "takenACT" class = "input">
         <label for = "actDate" class = "label">Date Taken:</label>
-        <input type="text" id = "actDate" class = "input"><br><br>
+        <input type="date" id = "actDate" class = "input"><br><br>
 
         <!-- Tenth Row Questions -->
         <label for = "english" class = "label">English:</label>
