--- a/New Student Form.html
+++ b/New Student Form.html
@@ -45,10 +45,14 @@
         <input type="radio" name = "gender" value = "Male">Male<br><br>
 
         <!-- Fifth Row Questions -->
-        <label for = "sibling1" class = "label">Sibling:</label>
-        <input type="text" id = "sibling1" class = "input">
-        <label for = "siblingAge1" class = "label">Age:</label>
-        <input type="number" min = 1 max = 130 id = "siblingAge1" class = "input"><br><br>
+        <div class = "addingElements">
+            <label for = "sibling1" class = "label">Sibling:</label>
+            <input type="text" id = "sibling1" class = "input">
+            <label for = "siblingAge1" class = "label">Age:</label>
+            <input type="number" min = 1 max = 130 id = "siblingAge1" class = "input">
+            <input type = "image" src="Images/Add Button.jpg" height = 25px class = "addButton">
+            <br><br>
+        </div>
 
         <!-- Sixth Row Questions -->
         <label for = "school" class = "label">School:</label>
