fixed the add button being in the middle

--- a/New Student Form.html
+++ b/New Student Form.html
@@ -346,7 +346,7 @@
             <input type="text" id = "sibling1" class = "input">
             <label for = "siblingAge1" class = "label">Age:</label>
             <input type="number" min = 1 max = 130 id = "siblingAge1" class = "input">
-            <input type = "image" src="Images/Add Button.jpg" height = 25px class = "addButton" id = "addSiblingButton">
+            <input type = "image" src="Images/Add Button.jpg" height = 25px class = "addButton" id = "addSiblingButton" onclick="addSibling()">
             <br><br>
         </div>
 
@@ -438,7 +438,7 @@
 
 
         <!-- Submit Button -->
-        <input type="submit" id = "submit" class = "input">
+        <input type="submit" id = "submit" class = "input" onclick="submitForm()">
         <p id = "submitErrorMsg"></p>
 
 
