--- a/Forms/New Student Form/New Student Form.html
+++ b/Forms/New Student Form/New Student Form.html
@@ -355,8 +355,8 @@
                 <label for="siblingAge1" class="label">Age:</label>
                 <input type="text" min=1 max=130 id="siblingAge1" class="input">
             </div>
-            <img src="Images/Add Button.jpg" height=25px class="addButton" id="addSiblingButton" onclick="addSibling()">
-            <img src="Images/Remove Button.jpg" height=25px class="addButton" id="addSiblingButton" onclick="removeSibling()">
+            <img src="../../Images/Add Button.jpg" height=25px class="addButton" id="addSiblingButton" onclick="addSibling()">
+            <img src="../../Images/Remove Button.jpg" height=25px class="addButton" id="addSiblingButton" onclick="removeSibling()">
             <br><br>
 
             <!-- Sixth Row Questions -->
