--- a/Forms/New Parent Form/New Student.html
+++ b/Forms/New Parent Form/New Student.html
@@ -11,35 +11,12 @@
 </head>
 
 <body>
-    <div id="pageDiv">
-
-
-        <div id = "title">
-            <h1>
-                New Student Form
-            </h1>
-        </div>
-
-
-
-        <div id="form">
-        </div>
-
-
-
-        <div id="banner">
-            <div class = "fullLength finalLength">
-                <h2>
-                    Parent Information
-                </h2>
-            </div>
-            <div class = "longLength">
-                <h2>
-                    Student Information
-                </h2>
+    <section id = "section">
+        <div id="pageDiv">
+            <div id="form">
             </div>
         </div>
-    </div>
+    </section>
 </body>
 
 </html>
