updated sign in background

--- a/Sign In/Sign In.html
+++ b/Sign In/Sign In.html
@@ -20,7 +20,8 @@
 
 <body>
   <section id="sign-in-section">
-    <img src = "../Images/Wasatch Logo.png">
+    <div id="sign-in-block">
+      <img src = "../Images/Wasatch Logo.png">
       <div class="input-block">
         <label for="username" class="label">username</label>
         <input type="text" placeholder="email address" id="username" class="input">
@@ -31,5 +32,6 @@
       </div>
       <button id="submitBtn" class="button" onclick="login()">submit</button>
       <p id="errMsg"></p>
+    </div>
   </section>
 </body>
