--- a/Forms/New Parent Form/New Parent Form.html
+++ b/Forms/New Parent Form/New Parent Form.html
@@ -7,68 +7,108 @@
     <title>Document</title>
     <link href="New Student.css" rel="stylesheet">
     </link>
-    <script src="New Parent Form.js" defer></script>
+    <!-- <script src="New Parent Form.js" defer></script> -->
 </head>
 
-    <section id = "section">
-<div id="pageDiv" class="">
-    <div class="flexRow">
-        <h2 class="formTitle">Parent Information</h2>
-    </div>
-    <div id="form">
-        <div id="formDiv" class="flexColumn">
-            <div class="flexRow">
-                <div class="flexColumn"><label for="firstName" class="label">Full Name:</label><input id="firstName"
-                        placeholder="First Name" class="input"></div>
-                <div class="flexColumn"><label for="lastName" class="label"></label><input id="lastName"
-                        placeholder="Last Name" class="input"></div>
-            </div>
-            <div class="flexColumn"><label for="phoneNumber" class="label">Phone Number:</label><input id="phoneNumber"
-                    placeholder="Phone Number" class="input"></div>
-            <div class="flexColumn"><label for="email" class="label">Email Address:</label><input id="email"
-                    placeholder="E-mail Address" class="input"></div>
-            <div class="flexColumn"><label for="employment" class="label">Place of Employment:</label><input
-                    id="employment" placeholder="Place of Employment" class="input"></div>
-            <div class="flexColumn"><label for="marketing" class="label finalInput">How did you hear about
-                    us:</label><input id="marketing" placeholder="How did you hear about us?" class="input finalInput">
-            </div>
-            <div id="agreementDiv">
-                <ul>
-                    <div class="flexRow">
-                        <li>Payment may be made using cash, check, or credit card.</li><input
-                            class="input miniBox"><text>(initials)</text>
+<section id = "section">
+    <div id="registration-block">
+        <div class="heading-block">
+            <h2>Parent Information</h2>
+        </div>
+        <div id="form-scroll-block">
+            <form>
+                <div class="input-row">
+                    <div class="input-block">
+                        <label for="firstName" class="label">First Name:</label>
+                        <input id="firstName" placeholder="First Name" class="input">
                     </div>
-                    <div class="flexRow">
-                        <li>There is a $30 fee for all returned checks.</li><input
-                            class="input miniBox"><text>(initials)</text>
+                    <div class="input-block">
+                        <label for="lastName" class="label">Last Name: </label>
+                        <input id="lastName" placeholder="Last Name" class="input">
                     </div>
-                    <div class="flexRow">
-                        <li>Payment is due on the 1st of each month and will be for the total amount for the month to
-                            come. (Session must be paid, prior to instruction)</li><input
-                            class="input miniBox"><text>(initials)</text>
-                    </div>
-                    <div class="flexRow">
-                        <li>Notice must be given by the end of the previous business day for <u>ALL</u> cancellations
-                            and/or schedule changes.</li><input class="input miniBox"><text>(initials)</text>
-                    </div>
-                    <div class="flexRow">
-                        <li>If notice is not given the day prior, I understand that I <em>WILL</em> be charged for the
-                            full amount of the session.</li><input class="input miniBox"><text>(initials)</text>
-                    </div>
-                </ul>
-                <div class="flexRow">
-                    <div class="flexColumn"><input class="input signature"><text class="signature">Parent
-                            Signature</text></div>
-                    <div class="flexColumn"><input class="input smallBox date"><text class="date">Date</text></div>
                 </div>
-            </div>
+
+                <div class="input-row">
+                    <div class="input-block">
+                        <label for="phoneNumber" class="label">Phone Number:</label>
+                        <input id="phoneNumber" placeholder="Phone Number" class="input">
+                    </div>
+                    <div class="input-block">
+                        <label for="email" class="label">Email Address:</label>
+                        <input id="email" placeholder="E-mail Address" class="input">
+                    </div>
+                </div>
+
+                <div class="input-row">
+                    <div class="input-block">
+                        <label for="employment" class="label">Place of Employment:</label>
+                        <input id="employment" placeholder="Place of Employment" class="input">
+                    </div>
+
+                    <div class="input-block">
+                        <label for="marketing" class="label finalInput">How did you hear about us:</label>
+                        <input id="marketing" placeholder="How did you hear about us?" class="input finalInput">
+                    </div>
+                </div>
+                <div id="agreementDiv">
+                    <ul>
+                        <li>
+                            <div class="agreement-row">
+                                <p>Payment may be made using cash, check, or credit card.</p>
+                                <input class="input miniBox">
+                                <text>(initials)</text>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="agreement-row">
+                                <p>There is a $30 fee for all returned checks.</p>
+                                <input class="input miniBox">
+                                <text>(initials)</text>
+                            </div>
+                        </li>
+                            <div class="agreement-row">
+                                <p>Payment is due on the 1st of each month and will be for the total amount for the month to
+                                    come. (Session must be paid, prior to instruction)</p>
+                                    <input class="input miniBox">
+                                    <text>(initials)</text>
+                            </div>
+                        <li>
+                            <div class="agreement-row">
+                                <p>Notice must be given by the end of the previous business day for <u>ALL</u> cancellations
+                                    and/or schedule changes.</p>
+                                    <input class="input miniBox">
+                                    <text>(initials)</text>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="agreement-row">
+                                <p>If notice is not given the day prior, I understand that I <em>WILL</em> be charged for the
+                                    full amount of the session.</p>
+                                    <div class="flexColumn">
+                                        <input class="input miniBox">
+                                        <text>(initials)</text>
+                                    </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="input-row">
+                        <div class="input-block">
+                            <input class="input signature">
+                            <text class="signature">Parent Signature</text>
+                        </div>
+                        <div class="input-block">
+                            <input class="input smallBox date">
+                            <text class="date">Date</text>
+                        </div>
+                    </div>
+                </div>
+            </form>
             <p><b>Privacy Notice</b></p>
             <p id="statement">We at <em>WASATCH TUTORS</em> take the security of your personal information very
                 seriously. We will <b>NEVER</b> share your information with any other companies or organizations, other
                 than our own, without your written approval. Rest assured that your information is safe with us.</p>
         </div>
     </div>
-</div>
 </section>  
 
 </html>
