general layout bug fixes

--- a/Forms/New Parent Form/New Parent Form.html
+++ b/Forms/New Parent Form/New Parent Form.html
@@ -55,28 +55,28 @@
                         <li>
                             <div class="agreement-row">
                                 <p>Payment may be made using cash, check, or credit card.</p>
-                                <input class="input miniBox">
+                                <input class="input initials">
                                 <text>(initials)</text>
                             </div>
                         </li>
                         <li>
                             <div class="agreement-row">
                                 <p>There is a $30 fee for all returned checks.</p>
-                                <input class="input miniBox">
+                                <input class="input initials">
                                 <text>(initials)</text>
                             </div>
                         </li>
                             <div class="agreement-row">
                                 <p>Payment is due on the 1st of each month and will be for the total amount for the month to
                                     come. (Session must be paid, prior to instruction)</p>
-                                    <input class="input miniBox">
+                                    <input class="input initials">
                                     <text>(initials)</text>
                             </div>
                         <li>
                             <div class="agreement-row">
                                 <p>Notice must be given by the end of the previous business day for <u>ALL</u> cancellations
                                     and/or schedule changes.</p>
-                                    <input class="input miniBox">
+                                    <input class="input initials">
                                     <text>(initials)</text>
                             </div>
                         </li>
@@ -85,7 +85,7 @@
                                 <p>If notice is not given the day prior, I understand that I <em>WILL</em> be charged for the
                                     full amount of the session.</p>
                                     <div class="flexColumn">
-                                        <input class="input miniBox">
+                                        <input class="input initials">
                                         <text>(initials)</text>
                                     </div>
                             </div>
@@ -93,12 +93,12 @@
                     </ul>
                     <div class="input-row">
                         <div class="input-block">
-                            <input class="input signature">
-                            <text class="signature">Parent Signature</text>
+                            <input class="input signature" id="signature">
+                            <text for="signature" class="label">Parent Signature</text>
                         </div>
                         <div class="input-block">
-                            <input class="input smallBox date">
-                            <text class="date">Date</text>
+                            <input class="input date" id="date">
+                            <label for="date" class="label">Date</text>
                         </div>
                     </div>
                 </div>
