Messing with the progress bar

--- a/Forms/New Parent Form/New Parent Form.html
+++ b/Forms/New Parent Form/New Parent Form.html
@@ -15,6 +15,13 @@
         <div class="heading-block">
             <h2>Parent Information</h2>
         </div>
+        <div class="progress-wrapper">
+            <ul class="progress-bar">
+                <li class="active">Parent</li>
+                <li>Student</li>
+                <li>Review</li>
+            </ul>
+        </div>
         <div id="form-scroll-block">
             <form>
                 <div class="input-row">
