--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
   <link rel="shortcut icon" href="../Images/favicon.ico">
-  <link href="Sign In.css" rel="stylesheet"/>
+  <link href="Sign-In.css" rel="stylesheet"/>
 
   <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js";></script>
   <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -15,7 +15,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
   <script src="../site-wide.js"></script>
-  <script src="Sign In.js" defer></script>
+  <script src="Sign-In.js" defer></script>
 </head>
 
 <body>
