--- a/post-sign-in.html
+++ b/post-sign-in.html
@@ -3,31 +3,44 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Redirect</title>
+    <title>Post Sign In</title>
     <link href="post-sign-in.css" rel="stylesheet">
   </head>
 
   <body>
     <section>
-      <div class="input-block">
-        <label class="label">Pending Students</label>
-        <select name="pending-student">
-          <option>Choose a student</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-        </select>
+      <div class="header">
+        <div class="input-block">
+          <label class="label">Pending Students</label>
+          <select name="pending-student">
+            <option>Choose a student</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+          </select>
+        </div>
+        <div class="input-block">
+          <label class="label">Active Students</label>
+          <select name="active-students">
+            <option>Choose a student</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+          </select>
+        </div>
+        <div class="input-block">
+          <label class="label">Parents</label>
+          <select name="pending-student">
+            <option>Choose a parent</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+            <option value="Test">Test</option>
+          </select>
+        </div>
       </div>
-      <div class="input-block">
-        <label class="label">Active Students</label>
-        <select name="active-students">
-          <option>Choose a student</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-          <option value="Test">Test</option>
-        </select>
-      </div>
+      <button class="button justify-end">Inquiry</button>
     </section>
   </body>
