--- a/public/Forms/New Parent Form/New Parent Form.html
+++ b/public/Forms/New Parent Form/New Parent Form.html
@@ -7,6 +7,14 @@
     <title>Document</title>
     <link href="New Student.css" rel="stylesheet">
     </link>
+
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js";></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
+
+    <script src="../../site-wide.js"></script>
     <!-- <script src="New Parent Form.js" defer></script> -->
 </head>
 
