--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
-    <script src="public/site-wide.js"></script>
+    <script src="site-wide.js"></script>
 
     <script src="inquiry.js" defer></script>
   </head>
