Fixing site wide

--- a/public/Sign-In/Sign-In.html
+++ b/public/Sign-In/Sign-In.html
@@ -14,7 +14,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
-  <script src="../site-wide.js" defer></script>
+  <script src="../Site Templates/site-wide.js" defer></script>
   <script src="Sign-In.js" defer></script>
 </head>
 
