--- a/public/post-sign-in.html
+++ b/public/post-sign-in.html
@@ -12,7 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
 
-    <script src="site-wide.js"></script>
+    <script src="Site Templates/site-wide.js"></script>
     <script src="post-sign-in.js"></script>
 
   </head>
