--- a/public/Forms/New Student/New Student Form.html
+++ b/public/Forms/New Student/New Student Form.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-functions.js"></script>
-    <script src="../../site-wide.js" defer></script>
+    <script src="../../Site Templates/site-wide.js" defer></script>
     <script src="New Student.js" defer></script>
     <script src="Input Formatting.js" defer></script>
     <script src="Validation.js" defer></script>
